--- a/templates/empleados/index.html
+++ b/templates/empleados/index.html
@@ -7,8 +7,30 @@
     <title>Document</title>
 </head>
 <body>  
-
-    <h1>Anda joya!!!</h1>
+     <table class="table table-light">
+        <thead class="thead-light">
+            <tr>
+                <th>#</th>
+                <th>Foto</th>
+                <th>Nombre</th>
+                <th>Correo</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for empleado in empleados %}
+            <tr>
+                <td>{{empleado[0]}}</td>
+                <td>{{empleado[3]}}</td>
+                <td>{{empleado[1]}}</td>
+                <td>{{empleado[2]}}</td>
+                <td>Editar |
+                    <a href="/destroy/{{empleado[0]}}">Eliminar</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+     </table>
 
 </body>
 </html>
