--- a/templates/empleados/index.html
+++ b/templates/empleados/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <title>Document</title>
-</head>
-<body>  
+{% include 'header.html' %}
+
+ 
      <table class="table table-light">
         <thead class="thead-light">
             <tr>
@@ -33,5 +27,6 @@
         </tbody>
      </table>
 
-</body>
-</html>
+
+
+{% include 'footer.html' %}
