--- a/templates/empleados/edit.html
+++ b/templates/empleados/edit.html
@@ -1,4 +1,4 @@
-
+{% include 'header.html' %}
 {% for empleado in empleados %}
 
 <form method="post" action="/update" enctype="multipart/form-data">
@@ -23,3 +23,6 @@
 
 </form>
 {% endfor %}
+
+
+{% include 'footer.html' %}
