--- a/templates/empleados/index.html
+++ b/templates/empleados/index.html
@@ -1,5 +1,6 @@
 {% include 'header.html' %}
 
+<a href="{{url_for('create')}}" class="btn btn-dark">Crear Empleado</a>
  
      <table class="table table-light">
         <thead class="thead-light">
@@ -15,12 +16,14 @@
             {% for empleado in empleados %}
             <tr>
                 <td>{{empleado[0]}}</td>
-                <td>{{empleado[3]}}</td>
+                <td>
+                    <img class="img-thumbnail" width="100px" src="uploads/{{empleado[3]}}" alt="">                  
+                </td>
                 <td>{{empleado[1]}}</td>
                 <td>{{empleado[2]}}</td>
-                <td> <a href="/edit/{{empleado[0]}}">Editar</a>
+                <td> <a class="btn btn-warning" href="/edit/{{empleado[0]}}">Editar</a>
                      |
-                    <a href="/destroy/{{empleado[0]}}">Eliminar</a>
+                    <a onclick="return confirm('posta lo queres borrar?')" class="btn btn-danger" href="/destroy/{{empleado[0]}}">Eliminar</a>
                 </td>
             </tr>
             {% endfor %}
