--- a/templates/empleados/edit.html
+++ b/templates/empleados/edit.html
@@ -3,23 +3,48 @@
 
 <form method="post" action="/update" enctype="multipart/form-data">
 
-    Id:
-    <input type="text" value="{{empleado[0]}}" name="txtId" id="txtId">
-    <br>
-   
-    Nombre:
-    <input type="text" value="{{empleado[1]}}" name="txtNombre" id="txtNombre">
-    <br>
 
-    Correo:
-    <input type="text" value="{{empleado[2]}}" name="txtCorreo" id="txtCorreo">
-    <br>
+    <div class="card">
+        <div class="card-header">
+            Editar
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Datos</h5>
+            <p class="card-text">
 
-    Foto: {{empleado[3]}}
-    <input type="file" name="txtFoto" id="txtFoto">
-    <br>
+                <div class="form-group">
+                    <input id="txtId" value="{{empleado[0]}}" class="form-control" type="hidden" name="txtId">
+                </div>
 
-    <input type="submit" value="Editar">
+                <div class="form-group">
+                    <label for="txtId">Nombre</label>
+                    <input id="txtNombre" value="{{empleado[1]}}" class="form-control" type="text" name="txtNombre">
+                </div>
+
+                <div class="form-group">
+                    <label for="txtCorreo">Correo</label>
+                    <input id="txtCorreo" value="{{empleado[2]}}" class="form-control" type="text" name="txtCorreo">
+                </div>
+               
+                
+                
+                
+                <img class="img-thumbnail" width="100px" src="{{url_for('uploads', nombreFoto=empleado[3]) }}" alt="">
+            
+                <input type="file" name="txtFoto" id="txtFoto">
+                <br>
+            
+                <input class="btn btn-warning" type="submit" value="Editar">
+
+
+
+
+            </p>
+        </div>
+    </div>
+
+
+    
 
 </form>
 {% endfor %}
